
[*] Sat Feb 28 2004 - netcat (cvs)

  o Updated documentation material.
  o Accept the valid parameter 0 to `-w' command line switch.
  o Tunnel mode now allows not specifying target port.
  o Fixed an assert failure when cross-proto tunneling (-u option at the end).


[*] Sun Jan 11 2004 - netcat v0.7.1

  o Fixed bug in UDP connection code, using pktinfo support. [BUG #796765]
  o Fixed a segfault in the DNS lookup routines, caused by invalid DNS
    configurations.
  o Fixed two compilation issues on SCO Unix 3.2 v 5.0.4. [BUG #857650],
    [BUG #857657]
  o Fixed bug in command line switch `-i' on non-linux OS such as Solaris.
    [BUG #864780]
  o The debugging support now works on libc's that don't allow NULL pointers
    passed for string (`%s') modifiers.


[*] Thu Aug 21 2003 - netcat v0.7.0

  o Added command line switch `-c' (close), which shuts down the connection
    on EOF from stdin without waiting for any answer from remote host.
  o Some previously optionally included code related to signal handling is now
    included in the default compilation.
  o Now the SIGUSR1 signal is handled and prints the current sending/receiving
    statistics to stderr, disregarding the verbosity level given.
  o Added some development sheets for those that may want to study GNU Netcat's
    development, in the doc/drafts directory.
  o Fixed a bug in UDP listening mode without pktinfo support and specifying
    the listening interface with `-s'.
  o Now when connecting to an host by an alias of its, it won't write a warning
    anymore but instead it will show the real name of the host.
  o Various fixes for code portability.  Changed the debugging support routines,
    and checking better what kind of compiler there is. [BUG #677625]
  o Fixed a simple compile error on Solaris7. [BUG #788870]
  o Fixed core dump in command line parsing routines when fgets() returned an
    empty string. [BUG #791799]