@@ -1,10 +1,11 @@
 
-[*] Sat Feb 28 2004 - netcat (cvs)
+[*] Sat Jul  3 2004 - netcat (cvs)
 
   o Updated documentation material.
   o Accept the valid parameter 0 to `-w' command line switch.
   o Tunnel mode now allows not specifying target port.
   o Fixed an assert failure when cross-proto tunneling (-u option at the end).
+  o Fixed bug when remote hostname parameter is "0" (a.k.a. "0.0.0.0").
 
 
 [*] Sun Jan 11 2004 - netcat v0.7.1
